[gd_scene load_steps=36 format=3 uid="uid://cxivj8i2g2xqf"]

[ext_resource type="PackedScene" uid="uid://bctcp65yp8t3f" path="res://graphics/characters/godette/godette.glb" id="1_c3p7g"]
[ext_resource type="Script" path="res://scenes/entities/player/godette_skin.gd" id="2_28utn"]
[ext_resource type="Texture2D" uid="uid://bgh8x0rsl78s5" path="res://graphics/characters/godette/godette_godette_faces.png" id="3_8x51d"]
[ext_resource type="Material" uid="uid://djwkjr4u5ijh5" path="res://scenes/entities/vfx/nagonshade.tres" id="3_fpmvk"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://graphics/weapons/wand.gltf" id="4_obev0"]
[ext_resource type="PackedScene" uid="uid://clpur8bqmswxy" path="res://scenes/entities/emeies/sword.tscn" id="5_86v0f"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://graphics/weapons/barbarian_texture.png" id="5_gmts5"]
[ext_resource type="PackedScene" uid="uid://dydnnq3ww2uyk" path="res://graphics/weapons/shield.gltf.glb" id="5_so0a0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wj3qg"]
albedo_texture = ExtResource("3_8x51d")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s3tto"]
albedo_texture = ExtResource("5_gmts5")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xjkul"]
animation = &"Block"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_mwe88"]
filter_enabled = true
filters = [".", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r", "slice"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_hbl2r"]
filter_enabled = true
filters = ["Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_8q3jr"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2m4ly"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_746l8"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yox8o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qk3fc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dael3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m1652"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m3gvg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_26sn6"]
states/Chop/node = SubResource("AnimationNodeAnimation_2m4ly")
states/Chop/position = Vector2(436.5, 111.625)
states/Slice/node = SubResource("AnimationNodeAnimation_746l8")
states/Slice/position = Vector2(344, -3.75)
transitions = ["Start", "Chop", SubResource("AnimationNodeStateMachineTransition_yox8o"), "Chop", "Slice", SubResource("AnimationNodeStateMachineTransition_qk3fc"), "Slice", "Chop", SubResource("AnimationNodeStateMachineTransition_dael3"), "Chop", "End", SubResource("AnimationNodeStateMachineTransition_m1652"), "Slice", "End", SubResource("AnimationNodeStateMachineTransition_m3gvg")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jkmmt"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i63n5"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r2yf5"]
animation = &"Running_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mlf3h"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kg13f"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1eh3i"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_un55n"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qd6jg"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w8ko7"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kkve7"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kfmgm"]
states/Idle/node = SubResource("AnimationNodeAnimation_jkmmt")
states/Idle/position = Vector2(350, 77)
states/Jump/node = SubResource("AnimationNodeAnimation_i63n5")
states/Jump/position = Vector2(520, 92.5)
states/Run/node = SubResource("AnimationNodeAnimation_r2yf5")
states/Run/position = Vector2(417, 188)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_mlf3h"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_kg13f"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_1eh3i"), "Run", "Jump", SubResource("AnimationNodeStateMachineTransition_un55n"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_qd6jg"), "Jump", "Run", SubResource("AnimationNodeStateMachineTransition_w8ko7"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_kkve7")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g54by"]
animation = &"Spellcast_Shoot"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lhnqc"]
graph_offset = Vector2(-481.511, -86.246)
nodes/Animation/node = SubResource("AnimationNodeAnimation_xjkul")
nodes/Animation/position = Vector2(-630, 230)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_mwe88")
nodes/AttackOneShot/position = Vector2(70, 130)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_hbl2r")
nodes/Blend2/position = Vector2(-270, 0)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_8q3jr")
nodes/OneShot/position = Vector2(460, 60)
nodes/attack/node = SubResource("AnimationNodeStateMachine_26sn6")
nodes/attack/position = Vector2(-270, 280)
nodes/move/node = SubResource("AnimationNodeStateMachine_kfmgm")
nodes/move/position = Vector2(-690, 50)
nodes/output/position = Vector2(790, 150)
nodes/xtra/node = SubResource("AnimationNodeAnimation_g54by")
nodes/xtra/position = Vector2(230, 220)
node_connections = [&"AttackOneShot", 0, &"Blend2", &"AttackOneShot", 1, &"attack", &"Blend2", 0, &"move", &"Blend2", 1, &"Animation", &"OneShot", 0, &"AttackOneShot", &"OneShot", 1, &"xtra", &"output", 0, &"OneShot"]

[node name="GodetteSkin" instance=ExtResource("1_c3p7g")]
script = ExtResource("2_28utn")

[node name="Skeleton3D" parent="Rig" index="0"]
bones/1/position = Vector3(0, 0.369321, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.551565, -0.0564699, -0.637715, 0.534702)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(3.67763e-08, -6.9437e-08, -0.516216, 0.856458)
bones/5/scale = Vector3(1, 0.999999, 1)
bones/6/rotation = Quaternion(1.44633e-08, 1.26672e-08, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.321437, -0.3387, 0.150024, 0.871466)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(0.000978536, 0.000978534, -0.703505, 0.710689)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/9/rotation = Quaternion(-0.610145, 0.0770003, 0.613313, 0.495622)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(1.55614e-08, 4.92197e-08, 0.538556, 0.84259)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-4.94614e-10, -1.45974e-08, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.320518, 0.314916, -0.232227, 0.862651)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.00307147, 0.00361774, 0.703908, 0.710275)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/15/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/15/rotation = Quaternion(0.989586, 0.0837282, 0.0787313, 0.086658)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(0.393967, 6.23921e-08, -2.65122e-07, 0.919125)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.620955, -0.200892, 0.076553, 0.753789)
bones/17/scale = Vector3(1, 1, 0.999999)
bones/18/rotation = Quaternion(-2.24322e-06, 0.920156, -0.391552, 5.90891e-07)
bones/18/scale = Vector3(1, 0.999998, 1)
bones/19/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/19/rotation = Quaternion(0.991444, -0.0333542, 0.0298098, 0.122627)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.438195, -5.77571e-08, 3.05024e-07, 0.89888)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(-0.646991, 0.112488, -0.0232756, 0.753795)
bones/21/scale = Vector3(1, 1, 0.999999)
bones/22/rotation = Quaternion(-8.93489e-05, 0.920222, -0.391398, 2.0291e-05)
bones/22/scale = Vector3(1, 0.999998, 1)
bones/23/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/24/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/24/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/25/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/26/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/26/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/27/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(4.16335e-17, -6.74097e-17, -1.94669e-08, 1)
bones/30/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/31/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/32/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/33/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/33/rotation = Quaternion(-1.05795e-07, 0.391084, 0.920355, -2.58643e-08)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-6.31127e-09, 0.16565, 2.70696e-09)
bones/34/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(1, 3.76525e-09, 1.94879e-07, 7.45058e-09)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/38/position = Vector3(0.520841, 0.774722, -0.0576374)
bones/38/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/39/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/40/position = Vector3(-0.510844, 0.774722, 0.0597369)
bones/40/rotation = Quaternion(0.758253, 1.52737e-07, -0.651961, 1.11759e-08)

[node name="Godette_ArmLeft" parent="Rig/Skeleton3D" index="0"]
material_overlay = ExtResource("3_fpmvk")

[node name="Godette_ArmRight" parent="Rig/Skeleton3D" index="1"]
material_overlay = ExtResource("3_fpmvk")

[node name="Godette_Body" parent="Rig/Skeleton3D" index="2"]
material_overlay = ExtResource("3_fpmvk")

[node name="Godette_Head" parent="Rig/Skeleton3D" index="3"]
material_overlay = ExtResource("3_fpmvk")
surface_material_override/0 = SubResource("StandardMaterial3D_wj3qg")

[node name="Godette_LegLeft" parent="Rig/Skeleton3D" index="4"]
material_overlay = ExtResource("3_fpmvk")

[node name="Godette_LegRight" parent="Rig/Skeleton3D" index="5"]
material_overlay = ExtResource("3_fpmvk")

[node name="RightHandSlot" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(0.00215546, -0.159231, -0.987239, -0.999958, -0.00900744, -0.000729605, -0.00877683, 0.9872, -0.159244, -0.490357, 0.627852, 0.107838)
bone_name = "handslot.r"
bone_idx = 13

[node name="wand2" parent="Rig/Skeleton3D/RightHandSlot" index="0" instance=ExtResource("4_obev0")]

[node name="wand" parent="Rig/Skeleton3D/RightHandSlot/wand2" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_s3tto")

[node name="Marker3D" type="Marker3D" parent="Rig/Skeleton3D/RightHandSlot/wand2/wand" index="0"]
transform = Transform3D(0.999862, 0.0165302, 0.00147766, -0.0165014, 0.999714, -0.0173405, -0.00176333, 0.0173139, 0.99985, -0.0339518, 0.691335, 0.00377542)

[node name="Sword" parent="Rig/Skeleton3D/RightHandSlot" index="1" instance=ExtResource("5_86v0f")]
visible = false

[node name="LeftHandSlot" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(6.7614e-07, 0.262863, 0.964833, 0.999943, -0.0101586, 0.00276803, 0.0105294, 0.964779, -0.262849, 0.507344, 0.623293, -0.0172866)
bone_name = "handslot.l"
bone_idx = 8

[node name="shield_gltf" parent="Rig/Skeleton3D/LeftHandSlot" index="0" instance=ExtResource("5_so0a0")]
transform = Transform3D(1, -2.84217e-13, -2.1903e-13, 0, 1, 5.68434e-14, 1.0233e-13, 1.13687e-13, 1, 0.00108689, 0.0318005, 0.141716)

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Idle"

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_lhnqc")
anim_player = NodePath("../AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/Blend2/blend_amount = 0.0
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[node name="slice" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true

[node name="blink" type="Timer" parent="." index="4"]
wait_time = 2.1
autostart = true

[connection signal="timeout" from="blink" to="." method="_on_blink_timeout"]

[editable path="Rig/Skeleton3D/RightHandSlot/wand2"]
